tests/ui/unexpected-field-fmt.stderr
error: not expected here; the #[error(...)] attribute belongs on top of a struct or an enum variant
 --> tests/ui/unexpected-field-fmt.rs:6:9
  |
6 |         #[error("...")]
  |         ^^^^^^^^^^^^^^^

error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> tests/ui/unexpected-field-fmt.rs:4:10
  |
4 | pub enum Error {
  |          ^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
